@@ -37,7 +37,8 @@ sub output_list
 	my $response = $session->make_element( "rss",
 		"version" => "2.0",
 		"xmlns:content" => "http://purl.org/rss/1.0/modules/content/",
-		"xmlns:dc" => "http://purl.org/dc/elements/1.1/" );
+		"xmlns:dc" => "http://purl.org/dc/elements/1.1/",
+		"xmlns:media" => "http://search.yahoo.com/mrss" );
 
 	my $channel = $session->make_element( "channel" );
 	$response->appendChild( $channel );
@@ -113,6 +114,7 @@ sub output_list
 			2,
 			"description",
 			EPrints::Utils::tree_to_utf8( $eprint->render_citation ) ) );
+		$item->appendChild( $plugin->render_media_content( $eprint ) );
 		
 		$channel->appendChild( $item );		
 	}	
@@ -138,6 +140,81 @@ sub RFC822_time
 	my( $time ) = @_;
 	$time = time if( !defined $time );
 	return( strftime( "%a, %d %b %Y %H:%M:%S %z", localtime( $time ) ) );
+}
+
+sub render_media_content
+{
+	my( $self, $dataobj ) = @_;
+
+	if( $dataobj->isa( "EPrints::DataObj::EPrint" ) )
+	{
+		return $self->render_eprint_media_content( $dataobj );
+	}
+	elsif( $dataobj->isa( "EPrints::DataObj::Document" ) )
+	{
+		return $self->render_doc_media_content( $dataobj );
+	}
+
+	return $self->{session}->make_doc_fragment();
+}
+
+sub render_eprint_media_content
+{
+	my( $self, $dataobj ) = @_;
+
+	my $session = $self->{session};
+
+	my $doc;
+
+	if( $session->get_repository->can_call( "eprint_rss_media_doc" ) )
+	{
+		$doc = $session->get_repository->call(
+				"eprint_rss_media_doc",
+				$dataobj,
+				$self
+			);
+	}
+	else
+	{
+		my @docs = $dataobj->get_all_documents();
+
+		@docs = grep { $_->is_public() } @docs;
+
+		$doc = $docs[0];
+	}
+
+	return $session->make_doc_fragment unless defined $doc;
+
+	return $self->render_doc_media_content( $doc );
+}
+
+sub render_doc_media_content
+{
+	my( $self, $dataobj ) = @_;
+
+	my $session = $self->{session};
+
+	my $frag = $session->make_doc_fragment;
+
+	my $thumbnail = $dataobj->thumbnail_url( "small" );
+	if( $thumbnail )
+	{
+		$frag->appendChild( $session->make_element( "media:thumbnail", 
+			url => $thumbnail,
+			type => "image/png",
+		) );
+	}
+
+	my $preview = $dataobj->thumbnail_url( "preview" );
+	if( $preview )
+	{
+		$frag->appendChild( $session->make_element( "media:content", 
+			url => $preview,
+			type => "image/png",
+		) );
+	}
+
+	return $frag;
 }
 
 1;
